@@ -75,6 +75,10 @@ struct fuse_ll {
 	int no_auto_inval_data;
 	int no_readdirplus;
 	int no_readdirplus_auto;
+	int async_dio;
+	int no_async_dio;
+	int writeback_cache;
+	int no_writeback_cache;
 	struct fuse_lowlevel_ops op;
 	int got_init;
 	struct cuse_data *cuse_data;
